resources/assets/admin/styles/_globals.scss
/* ... */
.copy_btn {
  background-color: #E7E6E6;
  border-radius: 4px;
  padding: 1px 10px;
  margin-left: auto;
  cursor: pointer;
  transition: 0.2s;
  &:hover{
    background-color: #d8d7d7;
  }
}
.ff_editor_html {
  ul {
    list-style-type: disc;
    padding-left: 3em;
  }
  ol {
    list-style-type: decimal;
    margin-left: 3em;
  }
}

// section block
.ff_section{
  &_block{
    margin-bottom: 64px;
    &:last-child{
      margin-bottom: 0;
    }
  }
}

.ff_radio_list {
  display: flex;
  flex-direction: column;
  &_item {
    width: 100%;
    margin-bottom: 2px;
    .el-radio-button__inner {
      background-color: transparent;
      border: 0 !important;
      padding: 13px 16px;
      border-radius: 6px !important;
      color: $--color-text-regular;
      width: 100%;
      text-align: left;
      box-shadow: none !important;
      transition: 0.2s;
      &:hover{
        background-color: rgba($--color-text-regular, 0.1);
        color: $base-color;
      }
    }
    &.is-active .el-radio-button__inner {
      background-color: rgba($--color-text-regular, 0.1);
      color: $base-color;
    }
  }
}

.is-sticky {
  position: fixed;
  top: 40px;
  z-index: 1020;
}

.ff_section_desc {
  font-size: 16px;
}


.ff_section{
  &_head{
    margin-bottom: 40px;
    &_between{
      display: flex;
      flex-wrap: wrap;
      justify-content: space-between;
    }
    &.sm{
      margin-bottom: 24px;
    }
    &_content_group{
      display: flex;
      align-items: center;
    }
    .text{
      font-size: 15px;
    }
  }
}
.el-row {
  display: flex;
  flex-wrap: wrap;
}

// align items
.items{
  &-start {
    align-items: flex-start !important;
  }
  &-center{
    align-items: center !important;
  }
  &_end{
    align-items: flex-end !important;
  }
}

.el-radio-button__inner{
  font-weight: 400;
}
.el-select-dropdown__item.selected{
  font-weight: 500;
}

//section layout
.ff_layout_section {
  display: flex;
  width: 100%;
  min-height: 550px;
  position: relative;
  &_sidebar {
    flex-shrink: 0;
    background-color: $white;
    box-shadow: 0 1px 3px rgba(30, 31, 33, 0.05);
    width: $section-layout-sidebar-width-sm;
    padding: 16px;
    vertical-align: top;
  }
  &_container {
    flex: 1;
    padding: 16px;
    //height: 95vh;
    overflow-y: scroll;
  }
}

.ff_settings_wrapper .ff_settings_sidebar_wrap {
  display: flex;
  flex-direction: column;
  align-self: stretch;
  overflow: hidden;
  height: calc(100vh - 112px);
  height: calc(100dvh - 112px);
  min-height: 0;

  &.ff_settings_sidebar_collapsed {
    width: 56px;

    .ff_layout_section_sidebar {
      width: 56px;
      padding: 12px 8px;
      overflow: hidden;
    }

    .ff_list_button_link {
      width: 40px;
      height: 40px;
      padding: 0 !important;
      display: flex;
      align-items: center;
      justify-content: center;
      overflow: visible;
    }

    .ff_settings_menu_icon {
      display: inline-flex;
      margin-right: 0;
    }

    .has_sub_menu .ff_list_button_link::after,
    .ff_list_submenu::after,
    .ff_list_submenu li::before,
    .ff_list_submenu li::after {
      display: none;
    }

    .ff_list_submenu,
    .ff_settings_menu_label,
    .ff_sidebar_toggle_text {
      display: none !important;
    }

    .ff_sidebar_toggle {
      justify-content: center;
      padding-left: 0;
      padding-right: 0;

      .ff-icon {
        transform: rotate(0deg);
      }
    }
  }
}

.ff_settings_sidebar {
  display: flex;
  flex-direction: column;
  flex: 1;
  min-height: 0;
  overflow-y: auto;
}

.ff_settings_wrapper .ff_settings_list {
  flex: 1;
  min-height: 0;
  overflow-y: auto;
  padding-bottom: 12px;
}

.ff_settings_menu_icon {
  display: none;
  font-size: 18px;
  line-height: 1;
  margin-right: 8px;
}

// global setting
.ff_global_setting_wrap,
.ff_tools_wrap {
  .ff_layout_section_sidebar {
    height: 100%;
  }
}

.ff_global_settings_option{
  overflow-y: scroll;
  height: 110vh;
  &::-webkit-scrollbar {
      display: none;
  }
  .el-form-item,
  .el-form-item-wrap {
    margin-bottom: 24px;
    &:last-child:not(.payment-methods-item){
        margin-bottom: 0;
    }
  }
  .ff_card:not(:last-child) {
    margin-bottom: 32px;
  }
}

.ff_input_width {
  width: 438px;
}
.ff_input_full_width {
  width: 100%;
}

.ff_tooltip_wrap {
  max-width: 320px;
  line-height: 1.6;
  font-size: 14px;
  h6{
    color: $white;
  }
}
.ff-icon-gray{
  color: #757D8A;
}

.el-form--label-top{
  .el-form-item__label{
    line-height: 1;
    padding-bottom: 16px;
  }
}

// ff-form-item
.ff-form-item{
  .el-form-item__label{
    font-size: 15px;
    color: $base-color;
    display: flex;
    align-items: center;
    font-weight: 500;
    .ff-icon{
      margin-left: 4px;
    }
  }
  .el-form-item__content{
    line-height: 1;
  }
  .ff-icon-info-filled,
  .el-icon-info {
    font-size: 13px;
  }
  .el-icon-info{
    transform: rotate(-14deg);
    color: $--color-primary;
  }
}

.el-select__tags input {
  background-color: transparent;
  border: none;
  padding: 0 8px;
  min-height: 30px;
  line-height: 2;
  margin-left: 0;
}
/* ... */

